fix: Kalau sudah buka 1 kategori tidak bisa pilih lagi kategori yang sama. Contoh saya buka dahua. Trus pilih cooper series. Kemudian mau pilih dahua untuk kategori lainnya tidak muncul. Harus pindah ke hikvision baru kembali ke dahua.

--- a/src/app/product/product.page.html
+++ b/src/app/product/product.page.html
@@ -49,13 +49,16 @@
     </ion-row>
   <!-- </ion-toolbar> -->
   <!-- <ion-toolbar> -->
-    <ion-segment (ionChange)="choose_kategori($event)" scrollable>
+    <!-- <ion-segment (ionChange)="choose_kategori($event)" scrollable> -->
+      <ion-segment scrollable>
       <ion-segment-button value="semua" checked>
-        <ion-label class="label_kategori">Semua</ion-label>
-      </ion-segment-button>      
-      <ion-segment-button [value]="item" *ngFor="let item of product_category">
-        <ion-label class="label_kategori">{{item.label}}</ion-label>
+        <ion-label class="label_kategori" (click)="choose_kategori('semua')">Semua</ion-label>
       </ion-segment-button>
+      <ng-container *ngFor="let item of product_category">
+        <ion-segment-button [value]="item" (click)="choose_kategori(item)">
+          <ion-label class="label_kategori">{{item.label}}</ion-label>
+        </ion-segment-button>
+      </ng-container>
     </ion-segment>
   <!-- </ion-toolbar> -->
   <ion-toolbar  [@visibilityChanged]="hide_header">
