fix riwayat order data duplikat setelah membuka detil dan kembali ke riwayat fix menyimpan ongkir dari api fix info harga ketika membuka detil produk

--- a/src/app/product-detail/product-detail.page.html
+++ b/src/app/product-detail/product-detail.page.html
@@ -60,9 +60,45 @@
       <!-- <ion-col size="1">
           :
       </ion-col>       -->
-      <ion-col size="12">
-          {{harga_jual_pro}}
-      </ion-col>      
+      <!-- <ion-col size="12" *ngIf="disc_pro > 0"> -->
+            <!-- <ng-container *ngIf="status_pel==1"> -->
+                <!-- normal disc:  -->
+                <!-- {{ harga_jual_pro2 - ( harga_jual_pro2 * disc_pro / 100 ) | currency : 'IDR' : 'Rp.' }} -->
+            <!-- </ng-container> -->
+            <!-- <ng-container *ngIf="status_pel==2"> -->
+                <!-- reseller disc:  -->
+                <!-- {{ harga_jual_reseller - ( harga_jual_reseller * disc_pro / 100 ) | currency : 'IDR' : 'Rp.' }} -->
+            <!-- </ng-container> -->
+      <!-- </ion-col> -->
+        <ion-col size="12">
+
+            <ng-container *ngIf="status_pel==1; then pel1; else checkpel2"></ng-container>
+            
+            <ng-template #pel1>
+                <!-- status 1 : -->
+                {{harga_jual_pro2 - (harga_jual_pro2 * disc_pro / 100) | currency : 'IDR' : 'Rp.'}}
+            </ng-template>
+            <ng-template #checkpel2>
+                <ng-container *ngIf="status_pel==2; then pel2; else checkpel0"></ng-container>
+            </ng-template>
+            <ng-template #pel2>
+                <!-- status 2: -->
+                {{harga_jual_reseller - (harga_jual_reseller * disc_pro / 100) | currency : 'IDR' : 'Rp.'}}
+            </ng-template>
+            
+            <ng-template #checkpel0>
+                <ng-container *ngIf="status_pel==0; then pel0; else otherpel"></ng-container>
+            </ng-template>
+
+            <ng-template #pel0>
+                {{harga_user - (harga_user * disc_pro / 100) | currency : 'IDR' : 'Rp.'}}
+            </ng-template>
+
+            <ng-template #otherpel>
+                <!-- status other: -->
+                {{harga_jual_pro2 - (harga_jual_pro2 * disc_pro / 100) | currency : 'IDR' : 'Rp.'}}
+            </ng-template>
+    </ion-col>
   </ion-row>  
   <ion-row>
       <ion-col size="12" [class.red_bg]="true">
