--- a/src/app/product/product.page.html
+++ b/src/app/product/product.page.html
@@ -52,7 +52,7 @@
     <!-- <ion-segment (ionChange)="choose_kategori($event)" scrollable> -->
     <ion-segment scrollable>
       <ion-segment-button value="semua" checked>
-        <ion-label class="label_kategori" (click)="choose_kategori('semua',0)">Semua</ion-label>
+        <ion-label class="label_kategori" (click)="choose_kategori('semua',0)">Terbaru</ion-label>
       </ion-segment-button>
       <ng-container *ngFor="let item of product_category">
         <ion-segment-button [value]="item" (click)="choose_kategori(item, 1)">
